@@ -205,7 +205,7 @@ static rsRetVal addListener(instanceConf_t *iconf) {
 
     switch (iconf->sockType) {
         case ZMQ_SUB:
-#if defined(ZMQ_DISH)
+#if defined(ZMQ_DISH) && (CZMQ_VERSION_MAJOR < 4 || (CZMQ_VERSION_MAJOR == 4 && CZMQ_VERSION_MINOR < 2))
         case ZMQ_DISH:
 #endif
             iconf->serverish = false;
@@ -243,7 +243,7 @@ static rsRetVal addListener(instanceConf_t *iconf) {
             if (iconf->sockType == ZMQ_SUB) {
                 zsock_set_subscribe(pData->sock, topic);
             }
-#if defined(ZMQ_DISH)
+#if defined(ZMQ_DISH) && (CZMQ_VERSION_MAJOR < 4 || (CZMQ_VERSION_MAJOR == 4 && CZMQ_VERSION_MINOR < 2))
             else if (iconf->sockType == ZMQ_DISH) {
                 int rc = zsock_join(pData->sock, topic);
                 if (rc != 0) {
@@ -594,7 +594,7 @@ BEGINnewInpInst
             else if (!strcmp("SUB", stringType)) {
                 inst->sockType = ZMQ_SUB;
             }
-#if defined(ZMQ_DISH)
+#if defined(ZMQ_DISH) && (CZMQ_VERSION_MAJOR < 4 || (CZMQ_VERSION_MAJOR == 4 && CZMQ_VERSION_MINOR < 2))
             else if (!strcmp("DISH", stringType)) {
                 inst->sockType = ZMQ_DISH;
             }
